--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main>
       <!-- find the phone section--------------------------- -->
-      <section class="">
+      <section class="mt-20">
         <div
           id="find-phone-container"
           class="flex flex-col justify-center items-center h-140 p-4"
