--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <style>
-      body {
-        background-color: black;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-      }
-    </style>
+  
   </head>
   <body>
  
@@ -33,13 +23,13 @@
         class="flex items-center justify-space-between p-4 mt-15"
       >
         <h3
-          class="text-xl font-bold md:text-2xl lg:text-5xl text-emerald-300 mr-10 md:mr-20 lg:mr-90"
+          class="text-xl flex-wrap  font-bold md:text-2xl lg:text-5xl text-emerald-300 mr-10 md:mr-20 lg:mr-90"
         >
           Phone Hunt
         </h3>
         <!-- From Uiverse.io by OnlyCodeChannel -->
         <!-- From Uiverse.io by CodeM7710 -->
-        <label class="label">
+        <label class="label flex flex-wrap">
           <input
             id="search-field"
             type="text"
@@ -57,14 +47,14 @@
 
     <main>
       <!-- find the phone section--------------------------- -->
-      <section class="mt-20">
+      <section class="mt-20 flex-wrap ">
         <div
           id="find-phone-container"
-          class="flex flex-col justify-center items-center h-140 p-4"
+          class="flex flex-col justify-center items-center  h-170 lg:h-160 md:h-240  p-4"
         >
           <h6 class="text-3xl text-teal-500">Search for a phone</h6>
           <p class=" text-teal-500">(Samsung, Apple, Oppo)</p>
-          <p class=" text-teal-500">Developed by Md Nurul Azim</p>
+         
         </div>
       </section>
 
@@ -117,7 +107,10 @@
       </dialog>
     </main>
 
-    <footer></footer>
+    <footer>
+       <p class=" text-teal-500">Developed by Md Nurul Azim</p>
+    </footer>
+
 
     <script src="script.js"></script>
   </body>
